Implements Isolate Server in Go.
It is datastore-compatible with the python implementation.

This permits simpler maintenance by using a strongly typed language while
keeping all the goodies from AppEngine.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
+/isolateserver/db
 /isolateserver/isolateserver
+/isolateserver/key.pem
+/isolateserver/privatekey.p12
+/isolateserver/settings.json
